  - Loading UML models containing references to other models should now work appropriately.
  - Reload of UML models now reloads changes of referenced external model elements as well.

* Some bugs in Ocl22Java were fixed.
  - OclAny.oclIsInvalid() is now transformed into working Java code.
  - OclCollection.sum() is now transformed into working Java code. 

Release 2.2 (June 16th 2010)
============================

* Dresden OCL2 for Eclipse now supports OCL 2.2!
  - The only exception is that the new keyword static is not supported yet.
  - Parsing, Interpretation and Java Code Generation of OCL 2.2 is now possible.
  
* A new Facade Plug-in containing a facade for all functionalities of
  Dresden OCL2 for Eclipse has been introduced.
  
* Dresden OCL2 for Eclipse now includes a standalone version for non-Eclipse Java projects.
  
* The Model and Model Instance Life-cycle Management has been improved.
  - After import, Models can now be removed again.
  - After import, Models can now be refreshed to update external changes.
  - After import, Model Instances can now be removed again.
  - Constraints can now be removed from models again.
  - Defined operations and properties are now removed then their constraints are removed as well.
  - Models can now be observed for changes.

* A bug in the ModelRegistry was fixed.
  - Adding of Models should now handle NullPointerExceptions correctly.
 
* XML Schemas are now supported as models for DresdenOCL.

* XML files are now supported as model instances for DresdenOCL.

* Some bugs in the UML2 Meta-Model were fixed.
  - If the top-level package is a UML model or profile directory, 
    these packages are now adapted correctly.
  - In UML2 models containing references to other UML2 models, the referenced models are now
    imported as part of the model as well.
    
* A bug in the EMF Ecore Meta-Model was fixed.
  - In Ecore models containing references to other Ecore models, the referenced models are now